# Time-Series-Forecasting

.devcontainer/: devcontainer.json
docker/dev/: docker-compose.yml
docker/dev/python/: Dockerfile
python-roi/: .gitignore  ROI_calculation.ipynb  interactive_project_diagram.ipynb  main.ipynb  main_updated.ipynb  main_v2.ipynb  pyproject.toml  scrap_diagram.ipynb
python-roi/Data/: 130_dana.csv  20_dana.csv  300_dana.csv  40_dana.csv  quality_controls.csv  quality_controls2.csv
